; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_vga.c_CopyLineToVga.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_vga.c_CopyLineToVga.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pScreenBufferVga = common dso_local global i32 0, align 4
@GLOBAL_SCREEN_WIDTH = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CopyLineToVga(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* @pScreenBufferVga, align 4
  %7 = sext i32 %6 to i64
  %8 = inttoptr i64 %7 to i32*
  store i32* %8, i32** %5, align 8
  %9 = call i32 (...) @ENTER_FUNC()
  %10 = load i32*, i32** %5, align 8
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* @GLOBAL_SCREEN_WIDTH, align 8
  %13 = mul i64 %11, %12
  %14 = getelementptr inbounds i32, i32* %10, i64 %13
  %15 = load i32*, i32** %5, align 8
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* @GLOBAL_SCREEN_WIDTH, align 8
  %18 = mul i64 %16, %17
  %19 = getelementptr inbounds i32, i32* %15, i64 %18
  %20 = load i64, i64* @GLOBAL_SCREEN_WIDTH, align 8
  %21 = mul i64 %20, 8
  %22 = call i32 @PICE_memcpy(i32* %14, i32* %19, i64 %21)
  %23 = call i32 (...) @LEAVE_FUNC()
  ret void
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @PICE_memcpy(i32*, i32*, i64) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
